--- a/CRUD-aluno/EM/EM.Web/Views/aluno/Create.cshtml
+++ b/CRUD-aluno/EM/EM.Web/Views/aluno/Create.cshtml
@@ -4,16 +4,18 @@
     ViewData["Title"] = "Cadastrar Aluno";
 }
 
-@if (TempData["MessagemErro"] != null)
+@if (TempData["MensagemErro"] != null)
 {
     <div class="alert alert-danger" role="alert">
-        @TempData["MessagemErro"]
+        <button type="button" class="btn btn-danger btn-sm close-alert" aria-label="Close">X</button>
+        @TempData["MensagemErro"]
     </div>
 }
 
 @if (TempData["MensagemAlerta"] != null)
 {
     <div class="alert alert-warning" role="alert">
+        <button type="button" class="btn btn-danger btn-sm close-alert" aria-label="Close">X</button>
         @TempData["MensagemAlerta"]
     </div>
 }
