--- a/CRUD-aluno/EM/EM.Web/Views/aluno/Editar.cshtml
+++ b/CRUD-aluno/EM/EM.Web/Views/aluno/Editar.cshtml
@@ -24,11 +24,11 @@
     </div>
 }
 
-@if (TempData["MessagemErro"] != null)
+@if (TempData["MensagemErro"] != null)
 {
     <div class="alert alert-danger" role="alert">
         <button type="button" class="btn btn-danger btn-sm close-alert" aria-label="Close">X</button>
-        @TempData["MessagemErro"]
+        @TempData["MensagemErro"]
     </div>
 }
 
