--- a/CRUD-aluno/EM/EM.Web/Views/aluno/Index.cshtml
+++ b/CRUD-aluno/EM/EM.Web/Views/aluno/Index.cshtml
@@ -9,6 +9,7 @@
 @if (TempData["MensagemAlerta"] != null)
 {
     <div class="alert alert-warning" role="alert">
+        <button type="button" class="btn btn-danger btn-sm close-alert" aria-label="Close">X</button>
         @TempData["MensagemAlerta"]
     </div>
 }
