--- a/CRUD-aluno/EM/EM.Web/Views/aluno/Create.cshtml
+++ b/CRUD-aluno/EM/EM.Web/Views/aluno/Create.cshtml
@@ -45,7 +45,7 @@
                 </div>
                 <div class="form-group">
                     <label asp-for="CPF" class="control-label"></label>
-                    <input asp-for="CPF" type="text" class="form-control" maxlength="14" oninput="mascaraCPF(this)" />
+                    <input asp-for="CPF" type="text" class="form-control" oninput="mascaraCPF(this)" />
                 </div>
                 <div class="form-group">
                     <label asp-for="Nascimento" class="control-label"></label>
