--- a/CRUD-aluno/EM/EM.Web/Views/aluno/Editar.cshtml
+++ b/CRUD-aluno/EM/EM.Web/Views/aluno/Editar.cshtml
@@ -48,12 +48,12 @@
             </div>
             <div class="form-group">
                 <label asp-for="CPF" class="control-label"></label>
-                <input asp-for="CPF" class="form-control" maxlength="14" oninput="mascaraCPF(this)" />
+                <input asp-for="CPF" class="form-control" oninput="mascaraCPF(this)" />
                 <span asp-validation-for="CPF" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Nascimento" class="control-label"></label>
-                <input asp-for="Nascimento" class="form-control" type="date" />
+                <input asp-for="Nascimento" class="form-control" type="date"/>
                 <span asp-validation-for="Nascimento" class="text-danger"></span>
             </div>
              <div class="form-group mb-4">
