--- a/CRUD-aluno/EM/EM.Web/Views/aluno/Index.cshtml
+++ b/CRUD-aluno/EM/EM.Web/Views/aluno/Index.cshtml
@@ -30,10 +30,10 @@
         <form asp-action="Index">
             <strong>Opções de busca: </strong>
 
-            <input type="radio" name="opcaoBusca" value="matricula" id="opcaoBusca_matricula">
+            <input type="radio" name="opcaoBusca" value="matricula" id="opcaoBusca_matricula" required>
             <label for="opcaoBusca_matricula">Matricula</label>
 
-            <input type="radio" name="opcaoBusca" value="nome" id="opcaoBusca_nome">
+            <input type="radio" name="opcaoBusca" value="nome" id="opcaoBusca_nome" required>
             <label for="opcaoBusca_nome">Nome</label>
 
             <div class="input-group mb-3">
